@@ -48,7 +48,7 @@ require 'minitest/global_expectations/autorun'
             end
           end
 
-          args 2, invalid_args_message: "accepts: x y"
+          args 2
           run do |x, y|
             push [:a, x, y]
           end
@@ -567,18 +567,39 @@ require 'minitest/global_expectations/autorun'
         res.must_be_empty
         proc{app.process(%w[a b])}.must_raise(Rodish::CommandFailure).message.must_equal("invalid number of arguments for a b subcommand (accepts: 1..., given: 0)")
         res.must_equal []
-        proc{app.process(%w[a])}.must_raise(Rodish::CommandFailure).message.must_equal("invalid arguments for a subcommand (accepts: x y)")
-        res.must_equal []
-        proc{app.process(%w[a 1])}.must_raise(Rodish::CommandFailure).message.must_equal("invalid arguments for a subcommand (accepts: x y)")
-        res.must_equal []
-        proc{app.process(%w[a 1 2 3])}.must_raise(Rodish::CommandFailure).message.must_equal("invalid arguments for a subcommand (accepts: x y)")
-        res.must_equal []
         proc{app.process(%w[c 1])}.must_raise(Rodish::CommandFailure).message.must_equal("invalid number of arguments for c subcommand (accepts: 0, given: 1)")
         res.must_equal []
         proc{app.process(%w[d])}.must_raise(Rodish::CommandFailure).message.must_equal("invalid number of arguments for d subcommand (accepts: 1, given: 0)")
         res.must_equal []
         proc{app.process(%w[d 1 2])}.must_raise(Rodish::CommandFailure).message.must_equal("invalid number of arguments for d subcommand (accepts: 1, given: 2)")
         res.must_equal []
+      end
+
+      it "invalid_args_message plugin supports customizing the invalid args message via #args" do
+        app.plugin :invalid_args_message
+        proc{app.process(%w[a])}.must_raise(Rodish::CommandFailure).message.must_equal("invalid number of arguments for a subcommand (accepts: 2, given: 0)")
+
+        app.on("a").args(2, invalid_args_message: "accepts: x y")
+        proc{app.process(%w[a])}.must_raise(Rodish::CommandFailure).message.must_equal("invalid arguments for a subcommand (accepts: x y)")
+        res.must_equal []
+        proc{app.process(%w[a 1])}.must_raise(Rodish::CommandFailure).message.must_equal("invalid arguments for a subcommand (accepts: x y)")
+        res.must_equal []
+        proc{app.process(%w[a 1 2 3])}.must_raise(Rodish::CommandFailure).message.must_equal("invalid arguments for a subcommand (accepts: x y)")
+        res.must_equal []
+      end
+
+      it "invalid_args_message plugin supports customizing the invalid args message via #is" do
+        app.plugin :invalid_args_message
+        app.is("a", args: 2, invalid_args_message: "accepts: x y"){}
+        proc{app.process(%w[a])}.must_raise(Rodish::CommandFailure).message.must_equal("invalid arguments for a subcommand (accepts: x y)")
+        res.must_equal []
+      end
+
+      it "invalid_args_message plugin supports customizing the invalid args message via #run_is" do
+        app.plugin :invalid_args_message
+        app.on("g").run_is("w", args: 2, invalid_args_message: "accepts: x y"){}
+        proc{app.process(%w[g 1 w])}.must_raise(Rodish::CommandFailure).message.must_equal("invalid arguments for g w subcommand (accepts: x y)")
+        res.must_equal [[:g, "1"]]
       end
 
       it "after_options_hook plugin should support an after_options hook" do
